--- a/inCaptiva-UI/Views/Home/Project.cshtml
+++ b/inCaptiva-UI/Views/Home/Project.cshtml
@@ -1,7 +1,4 @@
 ﻿@model IEnumerable<InCaptivaService.Project>
-@{
-    Layout=null;
-}
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,58 +7,63 @@
 </head>
 <body>
     <p>
-        <a asp-action="NewProject">Create New Project</a>
-    </p>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.CompletedTime)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.ID)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.StartTime)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Status)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach(var item in Model) {
+        @using(Html.BeginForm()) {
+        <p>
+            Name: <input type="text" name="Name">
+            <button type="submit">Add new project</button>
+        </p>
+        }
+        </p>
+        <table class="table">
+            <thead>
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.CompletedTime)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ID)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.StartTime)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Status)
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit","Edit",new { /* id=item.PrimaryKey */
-           }) |
-                        @Html.ActionLink("Details","Details",new { /* id=item.PrimaryKey */
-           }) |
-                        @Html.ActionLink("Delete","Delete",new { /* id=item.PrimaryKey */
-           })
-                    </td>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ID)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Name)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.StartTime)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CompletedTime)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Status)
+                    </th>
+                    <th></th>
                 </tr>
-            }
-        </tbody>
-    </table>
-</body>
+            </thead>
+            <tbody>
+                @foreach(var item in Model) {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ID)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StartTime)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CompletedTime)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Status)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit","Edit",new { /* id=item.PrimaryKey */
+                       }) |
+                            @Html.ActionLink("Details","Details",new { /* id=item.PrimaryKey */
+                       }) |
+                            @Html.ActionLink("Delete","Delete",new { /* id=item.PrimaryKey */
+                       })
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </body>
 </html>
