--- a/inCaptiva-UI/Views/Shared/_Layout.cshtml
+++ b/inCaptiva-UI/Views/Shared/_Layout.cshtml
@@ -30,8 +30,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Workers</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Worker">Employee</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Project">Project</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Task">Task</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="WorkEntry">Work entry</a></li>
                 </ul>
             </div>
         </div>
