--- a/inCaptiva-UI/Views/Home/Index.cshtml
+++ b/inCaptiva-UI/Views/Home/Index.cshtml
@@ -1,51 +1,15 @@
-﻿@model IEnumerable<InCaptivaService.Worker>
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <p>
-        @using(Html.BeginForm()) {
-        <p>
-            Name: <input type="text" name="Name">
-            <button type="submit">Add new employee</button>
-        </p>
+﻿
+@{
+    ViewData["Title"] = "Index";
+}
+
+<h2>Index</h2>
+
+<table class="table">
+    <tbody>
+        @foreach(var item in Model) {
+
         }
-        </p>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>
-                        @Html.DisplayNameFor(model => model.ID)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Name)
-                    </th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach(var item in Model) {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ID)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Name)
-                        </td>
-                        <td>
-                            @Html.ActionLink("Edit","Edit",new { /* id=item.PrimaryKey */
-           }) |
-                            @Html.ActionLink("Details","Details",new { /* id=item.PrimaryKey */
-           }) |
-                            @Html.ActionLink("Delete","Delete",new { /* id=item.PrimaryKey */
-           })
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </body>
-</html>
+    </tbody>
+</table>
+}
