--- a/inCaptiva-UI/Views/Home/Worker.cshtml
+++ b/inCaptiva-UI/Views/Home/Worker.cshtml
@@ -18,19 +18,19 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.ID)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.JobDescription)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.PhoneNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.JobDescription)
             </th>
             <th></th>
         </tr>
@@ -39,13 +39,7 @@
         @foreach(var item in Model) {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
                     @Html.DisplayFor(modelItem => item.ID)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.JobDescription)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Name)
@@ -54,12 +48,23 @@
                     @Html.DisplayFor(modelItem => item.PhoneNumber)
                 </td>
                 <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.JobDescription)
+                </td>
+                <td>
                     @Html.ActionLink("Edit","Edit",new { /* id=item.PrimaryKey */
-           }) |
+               }) |
                     @Html.ActionLink("Details","Details",new { /* id=item.PrimaryKey */
-           }) |
-                    @Html.ActionLink("Delete","Delete",new { /* id=item.PrimaryKey */
-           })
+               }) |
+
+                    @Html.ActionLink("Delete","Delete","HomeController",new {
+                   id = item.ID
+               },
+                    new {
+                        onclick = "return confirm('Are you sure you want to delete this?')"
+                    })
                 </td>
             </tr>
         }
