--- a/inCaptiva-UI/Views/Home/Index.cshtml
+++ b/inCaptiva-UI/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<inCaptiva_UI.Models.Data>
+﻿@model inCaptiva_UI.Models.Data
 
 @{
     ViewData["Title"] = "Frontpage";
@@ -9,13 +9,14 @@
         border: 1px solid;
         background-color: red;
         height: 20px;
-        display: inline-block;
+        /*display: inline-block;*/
     }
 
     #task {
         border: 1px solid;
-        background-color: blue;
+        /*background-color: blue;*/
         height: 20px;
+        margin-left: -4px;
         display: inline-block;
     }
 
@@ -23,42 +24,60 @@
         border: 1px solid;
         background-color: green;
         height: 20px;
-        display: inline-block;
+        /*display: inline-block;*/
     }
 
     #worker {
         border: 1px solid;
         background-color: gold;
         height: 20px;
-        display: inline-block;
+        /*display: inline-block;*/
     }
 
     #diagram {
         border: 1px solid;
-        width: 60%;
+        width: 75%;
     }
 
     #label {
-        width: 80px;
+        width: 120px;
         display: inline-block;
     }
 </style>
 
 <p></p>
 <p></p>
-<p></p>
-<p></p>
-
-@*<div id="diagram">
-        <div id="label">Worker:</div><div id="worker" style="width: @(Model.Worker.Count()*10+"%")"></div>
-        <br />
-        <div id="label">Project:</div><div id="project" style="width: @(Model.Project.Count()*10+"%")"></div>
-        <br />
-        <div id="label">Task:</div><div id="task" style="width: @(Model.Task.Count()*10+"%")"></div>
-        <br />
-        <div id="label">Work entry:</div><div id="workEntry" style="width: @(Model.WorkEntry.Count()*10+"%")"></div>
-    </div>*@
-
-@foreach (var item in Model) {
-    <div id="label">Project:</div><div id="project" style="width: @(item.Project.Count()*10+"%")"></div>
+@using (Html.BeginForm())
+{
+    <button type="submit">Replace with test data</button>
 }
+<p></p>
+<p></p>
+
+
+<div id="diagram">
+    @{ string[] color = new string[] { "red", "green", "blue", "yellow" }; }
+    @{ int lastID = -1; }
+    @{ int i = 0; }
+    @foreach (var task in Model.Task)
+    {
+        //new project
+        if (task.ProjectID != lastID)
+        {
+            i = 0;
+            <br />
+            <div id="label">Projekt ID - @(task.ProjectID): </div>
+        }
+
+        //task
+        <div id="task" style="background-color: @(color[i]); width: @(((task.EstimatedTime.TotalHours)/2).ToString().Replace(',','.'))%">@(task.ID)</div>
+
+        lastID = task.ProjectID;
+        i++;
+        if (i > color.Length-1)
+        {
+            i = 0;
+        }
+    }
+
+</div>
