--- a/inCaptiva-UI/Views/Home/Index.cshtml
+++ b/inCaptiva-UI/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
         /*background-color: blue;*/
         height: 20px;
         margin-left: -4px;
-        margin-top: -30px;
+        margin: -100px;
         display: inline-block;
     }
 
@@ -80,7 +80,7 @@
 
         //task
         <div id="task" style="background-color: @(color[i]); width: @(((task.EstimatedTime.TotalHours)/2).ToString().Replace(',','.'))%">@(task.ID)</div>
-        //<div id="task2" style="background-color: black; width: @(((task.TimeUsed.TotalHours)/2).ToString().Replace(',','.'))%">@(task.ID)</div>
+        <div id="task2" style="background-color: black; width: @(((task.TimeUsed.TotalHours)/2).ToString().Replace(',','.'))%">@(task.ID)</div>
 
         lastID = task.ProjectID;
         i++;
