--- a/inCaptiva-UI/Views/Home/WorkEntry.cshtml
+++ b/inCaptiva-UI/Views/Home/WorkEntry.cshtml
@@ -9,6 +9,7 @@
     <p>
         Worker ID: <input type="text" name="WorkerID">
         Task ID: <input type="text" name="TaskID">
+        <input name="lol" value="test" hidden/>
         <button type="submit">Add new Work entry</button>
     </p>
 }
@@ -17,7 +18,8 @@
 {
     <p>
         Entry ID: <input type="text" name="EntryID">
-        <button type="submit">End Work entry</button>
+        <input name="lol" value="test2" hidden />
+        <button name="test2" type="submit">End Work entry</button>
     </p>
 }
 <table class="table">
